# ml-setup

./: LICENSE  README.md  pyproject.toml
jupyter_demo/: demo.ipynb
quarto_intro/: README.md  references.bib  report.qmd  slides_beamer.qmd  slides_revealjs.qmd
