[project]
name = "machine-learning"
version = "0.1.0"
description = "ML Seminar Course Materials — FU Berlin Summer Term 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "scikit-learn>=1.8",
    "matplotlib>=3.10",
    "torch>=2.10",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "statsmodels>=0.14.6",
]
