[project]
name = "machine-learning"
version = "0.1.0"
description = "ML Course Course Materials — FU Berlin Summer Term 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "scikit-learn>=1.8",
    "matplotlib>=3.10",
    "torch>=2.10",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "statsmodels>=0.14.6",
    "seaborn>=0.13.2",
    "plotly>=6.7.0",
    "torchvision>=0.25.0",
    "d2l>=0.17.0",
    "scipy>=1.17.1",
]
